logs/ml-service.log
Traceback (most recent call last):
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/bin/uvicorn", line 8, in <module>
    sys.exit(main())
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/click/core.py", line 1462, in __call__
    return self.main(*args, **kwargs)
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/click/core.py", line 1383, in main
    rv = self.invoke(ctx)
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/click/core.py", line 1246, in invoke
    return ctx.invoke(self.callback, **ctx.params)
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/click/core.py", line 814, in invoke
    return callback(*args, **kwargs)
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/uvicorn/main.py", line 416, in main
    run(
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/uvicorn/main.py", line 587, in run
    server.run()
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/uvicorn/server.py", line 61, in run
    return asyncio.run(self.serve(sockets=sockets))
  File "/Users/vijayshankar/.pyenv/versions/3.10.13/lib/python3.10/asyncio/runners.py", line 44, in run
    return loop.run_until_complete(main)
  File "/Users/vijayshankar/.pyenv/versions/3.10.13/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/uvicorn/server.py", line 68, in serve
    config.load()
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/uvicorn/config.py", line 467, in load
    self.loaded_app = import_from_string(self.app)
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/venv/lib/python3.10/site-packages/uvicorn/importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
  File "/Users/vijayshankar/.pyenv/versions/3.10.13/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/Users/vijayshankar/Downloads/TechPrint/vulnguard/ml-service/app.py", line 247
    logger.info(f"Training accuracy: {model.score(X_train, y_train)".3f"}")
                                                                     ^
SyntaxError: invalid decimal literal
